--- a/templates/admin/products.html
+++ b/templates/admin/products.html
@@ -11,223 +11,74 @@
             
           </div>
 
-          <div class="row mt-2">
+          <div class="row mt-4">
             <div class="col-12">
               <div class="card mb-4">
-                <div class="card-header pb-0">
-                  <h6>Products table</h6>
-                </div>
                 <div class="card-body px-0 pt-0 pb-2">
                   <div class="table-responsive p-0">
                     <table class="table align-items-center mb-0">
                       <thead>
                         <tr>
-                          <th class="text-uppercase  text-sm ">Products</th>
-                          <th class="text-uppercase text-secondary text-sm ps-2">Function</th>
-                          <th class="text-center text-uppercase text-secondary text-sm ">Status</th>
-                          <th class="text-center text-uppercase text-secondary text-sm ">Employed</th>
-                          <th class="text-secondary opacity-7"></th>
+                          <th class=" text-uppercase text-center">image</th>
+                          <th class="text-center text-uppercase">title</th>
+                          <th class="text-center text-uppercase">description</th>
+                          <th class="text-center text-uppercase">price</th>
+                          <th class="text-center text-uppercase">category</th>
+                          <th class="text-center text-uppercase">Status</th>
+                          <th class=" text-uppercase">edit</th>
+                          <th class=" text-uppercase">delete</th>
+                          
                         </tr>
                       </thead>
                       <tbody>
+                        {% for product in products %}
                         <tr>
                           <td>
-                            <div class="d-flex px-2 py-1">
+                            <div class="d-flex justify-content-center">
                               <div>
-                                <img src="{% static 'admin/img/team-2.jpg' %}" class="avatar avatar-sm me-3" alt="user1">
+                                <img src="{{ product.image.url }}" class="avatar avatar-s me-3" alt="user1">
                               </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">John Michael</h6>
-                               
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p class="text-xs font-weight-bold mb-0">Manager</p>
-                          
-                          </td>
-                          <td class="align-middle text-center text-sm">
-                            <span class="badge badge-sm bg-gradient-success">Online</span>
-                          </td>
-                          <td class="align-middle text-center">
-                            <span class="text-secondary text-xs font-weight-bold">23/04/18</span>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success" data-toggle="tooltip" data-original-title="Edit user">
-                              Edit
-                            </a>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger" data-toggle="tooltip" data-original-title="Delete user">
-                              Delete
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="d-flex px-2 py-1">
-                              <div>
-                                <img src="{% static 'admin/img/team-3.jpg' %}" class="avatar avatar-sm me-3" alt="user2">
-                              </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Alexa Liras</h6>
-                                
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p class="text-xs font-weight-bold mb-0">Programator</p>
-                          
-                          </td>
-                          <td class="align-middle text-center text-sm">
-                            <span class="badge badge-sm bg-gradient-secondary">Offline</span>
-                          </td>
-                          <td class="align-middle text-center">
-                            <span class="text-secondary text-xs font-weight-bold">11/01/19</span>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success" data-toggle="tooltip" data-original-title="Edit user">
-                              Edit
-                            </a>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger" data-toggle="tooltip" data-original-title="Delete user">
-                              Delete
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="d-flex px-2 py-1">
-                              <div>
-                                <img src="{% static 'admin/img/team-4.jpg' %}" class="avatar avatar-sm me-3" alt="user3">
-                              </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Laurent Perrier</h6>
-                               
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p class="text-xs font-weight-bold mb-0">Executive</p>
-                           
-                          </td>
-                          <td class="align-middle text-center text-sm">
-                            <span class="badge badge-sm bg-gradient-success">Online</span>
-                          </td>
-                          <td class="align-middle text-center">
-                            <span class="text-secondary text-xs font-weight-bold">19/09/17</span>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success" data-toggle="tooltip" data-original-title="Edit user">
-                              Edit
-                            </a>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger" data-toggle="tooltip" data-original-title="Delete user">
-                              Delete
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="d-flex px-2 py-1">
-                              <div>
-                                <img src="{% static 'admin/img/team-3.jpg' %}" class="avatar avatar-sm me-3" alt="user4">
-                              </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Michael Levi</h6>
-                               
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p class="text-xs font-weight-bold mb-0">Programator</p>
-                            
-                          </td>
-                          <td class="align-middle text-center text-sm">
-                            <span class="badge badge-sm bg-gradient-success">Online</span>
-                          </td>
-                          <td class="align-middle text-center">
-                            <span class="text-secondary text-xs font-weight-bold">24/12/08</span>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success" data-toggle="tooltip" data-original-title="Edit user">
-                              Edit
-                            </a>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger" data-toggle="tooltip" data-original-title="Delete user">
-                              Delete
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="d-flex px-2 py-1">
-                              <div>
-                                <img src="{% static 'admin/img/team-2.jpg' %}" class="avatar avatar-sm me-3" alt="user5">
-                              </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Richard Gran</h6>
-                             
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p class="text-xs font-weight-bold mb-0">Manager</p>
-                           
-                          </td>
-                          <td class="align-middle text-center text-sm">
-                            <span class="badge badge-sm bg-gradient-secondary">Offline</span>
-                          </td>
-                          <td class="align-middle text-center">
-                            <span class="text-secondary text-xs font-weight-bold">04/10/21</span>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success" data-toggle="tooltip" data-original-title="Edit user">
-                              Edit
-                            </a>
-                          </td>
-                          <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger" data-toggle="tooltip" data-original-title="Delete user">
-                              Delete
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="d-flex px-2 py-1">
-                              <div>
-                                <img src="{% static 'admin/img/team-4.jpg' %}" class="avatar avatar-sm me-3" alt="user6">
-                              </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Miriam Eric</h6>
                               
-                              </div>
                             </div>
                           </td>
                           <td>
-                            <p class="text-xs font-weight-bold mb-0">Programtor</p>
+                            <div class="d-flex flex-column justify-content-center">
+                              <h6 class="mb-0 text-sm text-center">{{ product.title }}</h6>
+                             
+                            </div>
+                          
+                          </td>
+                          <td>
+                            <p class="text-center text-xs font-weight-bold mb-0">{{ product.description }}</p>
+                          
+                          </td>
+                          <td>
+                            <p class="text-center text-xs font-weight-bold mb-0">${{product.price}}</p>
+                          
+                          </td>
+                          <td>
+                            <p class="text-center text-xs font-weight-bold mb-0 text-center">{{product.category}}</p>
                           
                           </td>
                           <td class="align-middle text-center text-sm">
-                            <span class="badge badge-sm bg-gradient-secondary">Offline</span>
+                            <span class="text-center badge badge-sm bg-gradient-success">{{product.status}}</span>
                           </td>
-                          <td class="align-middle text-center">
-                            <span class="text-secondary text-xs font-weight-bold">14/09/20</span>
-                          </td>
+                          
                           <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success" data-toggle="tooltip" data-original-title="Edit user">
+                            <a href="javascript:;" class="badge badge-sm bg-gradient-success text-center" data-toggle="tooltip" data-original-title="Edit user">
                               Edit
                             </a>
                           </td>
                           <td class="align-middle">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger" data-toggle="tooltip" data-original-title="Delete user">
+                            <a href="javascript:;" class="badge badge-sm bg-gradient-danger text-center" data-toggle="tooltip" data-original-title="Delete user">
                               Delete
                             </a>
                           </td>
                         </tr>
+                      
+                        {% endfor %}
+                       
+                        
                       </tbody>
                     </table>
                   </div>
@@ -238,7 +89,7 @@
 
           <div class="card-body p-3">
             <div class="chart">
-              <canvas class="" height="640"></canvas>
+              <canvas class="" height="200"></canvas>
             </div>
           </div>
         </div>
