--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -52,6 +52,14 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link " href="{% url 'categories' %}">
+            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
+            </div>
+            <span class="nav-link-text ms-1">Categories</span>
+          </a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link " href="{% url 'products' %}">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
