--- a/templates/admin/add-category.html
+++ b/templates/admin/add-category.html
@@ -6,45 +6,37 @@
         <div class="card-header pb-0 pt-5 bg-transparent">
           <h2 class="text-capitalize text-center">Categories</h2>
         </div>
-        <form class="m-3 justify-content-end ">
+        <form class="m-3 justify-content-end" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
             <div class="row m-5">
                 <div class="col-6">
                     <label for="fname" class="form-label">Category Name:</label>
-                    <input class="form-control" type="text" id="fname" name="fname" placeholder="Category Name" /><br />
+                    <input class="form-control" type="text" id="fname" name="category_name" placeholder="Category Name" /><br />
                 </div>
                 <div class="col-6">
                     <label for="fname" class="form-label">Category image:</label>
-                    <input class="form-control" type="file" id="fimage" name="fimage" /><br />
+                    <input class="form-control" type="file" id="fimage" name="category_image" /><br />
                 </div>
-                <!-- <div class="col-6">
-                    <label for="fname" class="form-label">Category:</label>
-                    <select name="" id="" class="form-control">
-                        <option value="">select category</option>
-                        {% for Category in categories %}
-                        <option value="">{{Category.title}}</option>
-                        {% endfor %}
-                    </select>
-                </div> -->
                 <div class="col-4">
                     <label for="fname" class="form-label">Inner Title:</label>
-                    <input class="form-control" type="text" id="ftitle" name="fprice" placeholder=" Inner Title"/><br />
+                    <input class="form-control" type="text" id="ftitle" name="category_innertitle" placeholder=" Inner Title"/><br />
                 </div>
                 <div class="col-4">
                     <label for="fname" class="form-label">Inner SubTitle:</label>
-                    <input class="form-control" type="text" id="finnersubtitle" name="fprice" placeholder=" Inner SubTitle"/><br />
+                    <input class="form-control" type="text" id="finnersubtitle" name="category_innersubtitle" placeholder=" Inner SubTitle"/><br />
                 </div>
                 <div class="col-4">
                     <label for="fname" class="form-label">Sub Title:</label>
-                    <input class="form-control" type="text" id="fsubtitle" name="fprice" placeholder=" subtitle"/><br />
+                    <input class="form-control" type="text" id="fsubtitle" name="category_subtitle" placeholder=" subtitle"/><br />
                 </div>
                 <div class="col-12">
                     <label for="fname" class="form-label">Description:</label>
-                    <textarea name="" id="" cols="30" rows="5" class="form-control" placeholder=" description"></textarea>
+                    <textarea name="category_description" id="" cols="30" rows="5" class="form-control" placeholder=" description"></textarea>
                 </div>
                 
             </div>
             <div class="col-12 d-flex justify-content-end"><a href="">
-                <button class="button btn btn-primary text-white me-5 btn-lg">Add</button>
+                <button type="submit" class="button btn btn-primary text-white me-5 btn-lg">Add</button>
               </a>
               </div>
         </form>
