--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -2,7 +2,13 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid py-4">
- 
+  {% if messages  %}
+  {% for message in messages %}
+    <div class="alert alert-success" role="alert">
+      <strong>{{message}}</strong>
+    </div>
+    {% endfor %}
+    {% endif %}
     <div class="row mt-4">
       <div class="col-lg-12 mb-lg-0 mb-4">
         <div class="card z-index-2 h-100">
@@ -40,7 +46,9 @@
                           <td>
                             <div class="d-flex justify-content-center">
                               <div>
+                                {% if category.image %}
                                 <img src="{{ category.image.url }}" class="avatar avatar-s me-3" alt="user1">
+                                {% endif %}
                               </div>
                               
                             </div>
@@ -73,7 +81,7 @@
                           </td> -->
                           
                           <td class="align-middle text-center">
-                            <a href="javascript:;" class="badge badge-sm bg-gradient-success text-center" data-toggle="tooltip" data-original-title="Edit user">
+                            <a href="{% url 'edit_category' category.id %}" class="badge badge-sm bg-gradient-success text-center" data-toggle="tooltip" data-original-title="Edit user">
                               Edit
                             </a>
                             <a href="javascript:;" class="badge badge-sm bg-gradient-danger text-center" data-toggle="tooltip" data-original-title="Delete user">
